--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackjack</title>
     <link rel="stylesheet" href="CSS/style.css">
-    <script src="JS/script.js"></script>
-    <script src="https://kit.fontawesome.com/44d61e00dc.js" crossorigin="anonymous"></script>
+    <script type="module" src="JS/main.js"></script>
     <!-- <audio id="gameAudio" src="./SOUND/backgroundNoise.mp3" ></audio> -->
 </head>
  <!--
@@ -15,7 +14,6 @@ Top Menu
 ##############################
  --> 
 <body>
-<div id="wrapper">
      <!--
     <div class="show-bet-tokens">
         <div class="small-25-btn">25</div>
@@ -26,7 +24,7 @@ Top Menu
      -->
     <div class="top-nav" id="this-top-nav">
         
-        <img src="./CSS/skybet-50pxheight.png" class="nav-logo" alt="Return to skybet" onclick="redirectToSkyBet()">
+        <img src="./CSS/skybet-50pxheight.png" class="nav-logo" alt="Return to skybet" onclick="redirectToSkyBet();">
         <div class="nav-right">        
                 <button class="settings-menu-btn">
                    <h3>Settings</h3>
@@ -95,7 +93,8 @@ Player Control Buttons
  
  <div id="bet-amount-container">
     <div class="bet-amount">
-        Current Bet  <span>£</span><span id="current-bet-amount"></span>
+     <div id = "current-bet"> Current Bet </div><span>£</span><span id="current-bet-amount"></span>
+     
     </div>
 </div>
 
@@ -108,6 +107,9 @@ Player Control Buttons
 
         <button id="bet-btn" class="control-btn-bet button" onclick="blackjackGame.placeBet()">
             <h3>Press to bet</h3> <h3 id="currentBetAmountH3"></h3>
+        </button>
+        <button id="clear-bet-btn" class="control-btn-bet button" onclick="blackjackGame.clearBet()">
+            <h3>Clear Bet</h3><h3 id="clearBetAmountH3"></h3>
         </button>
     </div>
 </div>
@@ -140,22 +142,23 @@ Player Control Buttons
     <div id="status-popup">
         <div class="popup-container">
             <h1>It looks like you're connected...</h1>
-            <button id="keep-playing-button" button class="popup-btn popup-btn-red" onclick="hideRedirectPopUp()">
-                <h3>Return to game</h3>
-            </button>
-            <button id="return-button" button class="popup-btn popup-btn-green" onclick="redirectToSkyBet()">
-                <h3>Take me to Sky Bet</h3>
-            </button>
-            <h2>Do not remind me again <input type="checkbox" id="remind-checkbox" onclick="setRemindMeAboutRedirect()"></h2>
+            <div class="center-container">
+                <button id="keep-playing-button" button class="popup-btn popup-btn-red" onclick="window.hideRedirectPopUp();">
+                    <h3>Return to game</h3>
+                </button>
+                <button id="return-button" button class="popup-btn popup-btn-green" onclick="window.redirectToSkyBet();">
+                    <h3>Take me to Sky Bet</h3>
+                </button>
+            </div>
+            <h2>Do not remind me again <input type="checkbox" id="remind-checkbox" onclick="window.setRemindMeAboutRedirect();"></h2>
         </div>
     </div>
-    <div id="resultsBox" onclick="blackjackGame. playerClicksOffResultsPopUp()">
+    <div id="resultsBox" onclick="blackjackGame.playerClicksOffResultsPopUp()">
         <div class="results-container">
             <h1 id="results-text"></h1>
             <h3>Press anywhere to continue</h3>
         </div>
     </div>
-</div>
 
 <div id="insurance-taken-visual-indicator"><h1>Insurance Taken</h1></div>
 
@@ -173,10 +176,6 @@ Player Control Buttons
 <button id="sound-button" class="sound-control-btn button" onclick="toggleSound()">
     <img id="sound-button-img" src="./CSS/pinkSoundOn.png" alt="Sound" width="40" height="40">
 </button>
-
-
-
-    </div> 
 
     <div class="popup" id="tip-popup-window">
         <span class="popuptext" id="tipPopup"></span>
@@ -243,7 +242,6 @@ Tutorial Mode
         <br style="clear:both;"/>
     </div>
 </div>
-
 
 
 
